expected/main/gens/primAt-neg-32.err
ERROR: "actual/main/gens/primAt-neg-32.lc", line 7
external bad0 {primAt 0}       :: Ref (Array 8 SW) -> Ix 8 -> Ref SW
         ^
No generated implementation: primAt requires (at least) 2 arguments

ERROR: "actual/main/gens/primAt-neg-32.lc", line 8
external bad1 {primAt Word}    :: Ref (Array 8 SW) -> Ix 8 -> Ref SW
         ^
No generated implementation: primAt requires (at least) 2 arguments

ERROR: "actual/main/gens/primAt-neg-32.lc", line 10
external bad3 {primAt 4 S}     :: Ref (Array 4  S) -> Ix 4 -> Ref S
         ^
No generated implementation: Element size 5 is not divisible by alignment 4

ERROR: "actual/main/gens/primAt-neg-32.lc", line 11
external bad4 {primAt 4 Word}  :: Ref (Array 4 SW) -> Ix 4 -> Ref SW
         ^
No generated implementation: Argument 2 (Bit 32) does not have expected kind (area)

ERROR: "actual/main/gens/primAt-neg-32.lc", line 12
external bad5 {primAt 4G Word} :: Ref (Array 4G SW) -> Ix 4G -> Ref SW
         ^
No generated implementation: Argument 2 (Bit 32) does not have expected kind (area)

ERROR: "actual/main/gens/primAt-neg-32.lc", line 19
external at0SW   {primAt   0 SW} :: Ref (Array   0 SW) -> Ix   0 -> Ref SW
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primAt-neg-32.lc", line 21
external at0SI   {primAt   0 SI} :: Ref (Array   0 SI) -> Ix   0 -> Ref SI
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primAt-neg-32.lc", line 23
external at0SS   {primAt   0 SS} :: Ref (Array   0 SS) -> Ix   0 -> Ref SS
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primAt-neg-32.lc", line 25
external at0SA   {primAt   0 SA} :: Ref (Array   0 SA) -> Ix   0 -> Ref SA
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: Aborting after 9 previously reported errors

